--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,11 @@
 <phpunit
-        bootstrap="vendor/autoload.php"
+        bootstrap="./vendor/autoload.php"
         colors="true"
         verbose="true">
 
     <testsuites>
         <testsuite name="tests">
-            <directory>tests</directory>
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
 
