--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   ],
 
   "require": {
-    "php" : "^7.0|^7.1"
+    "php" : "^7.0|^7.1",
+    "vimeo/vimeo-api": "^2.0"
   },
 
   "require-dev": {
